为index.html添加了h2标题和内容，并增加了属性

--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0 minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta content="width=device-width, initial-scale=1.0 minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+          name="viewport"/>
+    <meta content="ie=edge" http-equiv="x-ua-compatible">
     <title>Title</title>
+    <style>
+        h2 {
+            color: pink;
+            font-weith: 300;
+        }
+    </style>
 </head>
 <body>
 <h1>这是标题</h1>
+<h2>这是一个二级标题</h2>
 </body>
 </html>
